--- a/module1/index.html
+++ b/module1/index.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
+  <!-- TODO: лучше было подключить все эти файлы в один 'index.css', а после подключить его один сюда -->
   <link href="./css/reset.css" rel="stylesheet">
   <link href="./css/main.css" rel="stylesheet">
   <link href="./css/header.css" rel="stylesheet">
@@ -56,7 +57,9 @@
 </header>
 <main class="main">
   <section class="main-screen__container-fluid" id="main_screen">
+      <!-- TODO: зачем класс 'container' указан дважды -->
     <div class="main-screen container container">
+      <!-- TODO: атрибут 'alt' заполняем всегда -->
     <img
         alt=""
         class="main-screen__image"
@@ -81,16 +84,16 @@
       <img src="image/main/info-screen/image2.png" alt="Основная информация" class="info-screen__image">
       <div class="info-screen__row">
         <h2 class="info-screen__title">
-            We are a high-level data<br> 
+            We are a high-level data<br>
             storage bank
         </h2>
         <p class="info-screen__description">
             The place to store various data that you can access at any<br>
-            time through the internet  and where you can carry it.<br> 
+            time through the internet  and where you can carry it.<br>
             This very flexible storage area has a high level of security.<br>
             To enter into your own data you must enter the password<br>
             that you created when you registered in this Data<br>
-            Warehouse. 
+            Warehouse.
         </p>
       </div>
   </section>
@@ -126,7 +129,7 @@
                         Learn more
                     </span>
                     <img class="features-item__icon" src="image/main/features-screen/arrow-right.png" alt="">
-                </a>    
+                </a>
             </div>
         </div>
         <div class="features-screen__item features-item features-item--second">
@@ -147,7 +150,7 @@
                         Learn more
                     </span>
                     <img src="image/main/features-screen/arrow-right.png" alt="" class="features-item__icon">
-                </a>    
+                </a>
             </div>
         </div>
         <div class="features-screen__item features-item features-item--third">
@@ -158,7 +161,7 @@
               </h3>
               <p class="features-item__description">
                 Print out service gives you<br>
-                convenience if someday you<br> 
+                convenience if someday you<br>
                 need print data, just edit it all<br>
                 and just print it.
               </p>
@@ -167,14 +170,14 @@
                       Learn more
                   </span>
                   <img src="image/main/features-screen/arrow-right.png" alt="" class="features-item__icon">
-              </a>    
+              </a>
           </div>
       </div>
       <div class="features-screen__item features-item features-item--fourth">
         <img
           class="features-item__image"
            src="image/main/features-screen/Security Code.png"
-           alt="Security Code" 
+           alt="Security Code"
         >
         <div class="features-item__row">
             <h3 class="features-item__title">
@@ -186,7 +189,7 @@
               files to be safer. The file can<br>
               be secured with a code or<br>
               password that you created,<br>
-              so only you can open the file. 
+              so only you can open the file.
             </p>
             <a href="#" class="features-item__button">
                 <span>
@@ -197,13 +200,14 @@
                   alt=""
                   class="features-item__icon"
                 >
-            </a>    
+            </a>
         </div>
     </div>
     </div>
   </section>
   <section class="testimonials-screen container-fluid" id="testimonials-screen">
     <div class="container">
+        <!-- TODO: не правильно используете заголовки h1-h6 (порядок) -->
       <h2 class="testimonials-screen__title">
         Testimonials
       </h2>
@@ -215,7 +219,7 @@
           <div class="slider__item-title">John Fang</div>
           <div class="slider__item-tag">wordfaang.com</div>
           <div class="slider__item-description">
-            Suspendisse ultrices at diam lectus nullam.<br> 
+            Suspendisse ultrices at diam lectus nullam.<br>
             Nisl, sagittis viverra enim erat tortor ultricies<br>
             massa turpis. Arcu pulvinar aenean nam laoreet<br>
             nulla.
@@ -267,6 +271,7 @@
         </div>
         <div class="slider-controls__buttons">
           <div class="slider-controls__button-prev">
+              <!-- TODO: лучше использовать тег <img> -->
             <svg width="42" height="16" viewBox="0 0 42 16" fill="none" xmlns="http://www.w3.org/2000/svg">
               <path d="M7 1L1 8L7 15" stroke="white" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
               <path d="M0.999998 8L41 8" stroke="white" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
@@ -278,20 +283,20 @@
                 <path d="M15 15L21 8L15 1" stroke="white" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
                 <path d="M21 8H1" stroke="white" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
               </g>
-            </svg>            
+            </svg>
           </div>
         </div>
       </div>
     </div>
     <div class="testimonials-screen__background container"></div>
-  </section>  
+  </section>
 </main>
 <footer class="footer container-fluid" id="footer">
   <div class="footer__container container">
     <div class="footer__row">
       <img
-          class="footer__logo" 
-          src="image/footer/Logo.svg" 
+          class="footer__logo"
+          src="image/footer/Logo.svg"
           alt="Логотип"
       >
         <p class="footer__address">
